--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -1,9 +1,9 @@
 headlineNumbers:
   - caption: Patients admitted
     valueItems:
-      - label: Latest daily
-        value: newAdmissions
-        tooltip: Daily number of COVID-19 patients admitted to hospital, reported on {date}
+      - label: Latest 7 days
+        value: newAdmissionsRollingSum
+        tooltip: Number of COVID-19 patients admitted to hospital, in the 7 days up to {date}
     
       - label: Total
         value: cumAdmissions
