--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -3,9 +3,9 @@ headlineNumbers:
   - caption: Virus tests reported
     valueItems:
 
-      - label: Daily
-        value: newVirusTestsByPublishDate
-        tooltip: Daily number of new virus tests reported on {date}
+      - label: Last 7 days
+        value: newVirusTestsByPublishDateRollingSum
+        tooltip: Number of new virus tests reported in the 7 days up to {date}
 
       - label: Total
         value: cumVirusTestsByPublishDate
