--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -2,9 +2,9 @@ headlineNumbers:
 
   - caption: Deaths within 28 days of positive test
     valueItems:
-      - label: Daily
-        value: newDeaths28DaysByPublishDate
-        tooltip: Daily number of deaths within 28 days of being identified as a COVID-19 case by a positive test, reported on {date}
+      - label: Last 7 days
+        value: newDeaths28DaysByPublishDateRollingSum
+        tooltip: Number of deaths within 28 days of being identified as a COVID-19 case by a positive test, reported in the 7 days up to {date}
 
       - label: Total
         value: cumDeaths28DaysByPublishDate
@@ -1721,183 +1721,185 @@ cards:
 
 ##############################################################################################################################
 
+# NO LONGER USED - report date radio button no longer required so England added to chart below
+
 # England only 60 day chart, not shown for UK. NOTE: similar chart for regions and LAs defined as separate card below
 
-  - heading: Deaths within 60 days of positive test
-    cardType: chart
-    locationAware:
-      included:
-        areaType:
-          - nation
-      excluded:
-        areaName:
-          - Northern Ireland
-          - Scotland
-          - Wales
+  # - heading: Deaths within 60 days of positive test
+  #   cardType: chart
+  #   locationAware:
+  #     included:
+  #       areaType:
+  #         - nation
+  #     excluded:
+  #       areaName:
+  #         - Northern Ireland
+  #         - Scotland
+  #         - Wales
 
-    fullWidth: true
-    abstract: >
-      Number of people who had either died within 60 days of being identified as a COVID-19 case, 
-      or died more than 60 days after being identified as a case and have COVID-19 mentioned on their death certificate. 
-      Data for the last 5 days, highlighted in grey, are incomplete. 
+  #   fullWidth: true
+  #   abstract: >
+  #     Number of people who had either died within 60 days of being identified as a COVID-19 case, 
+  #     or died more than 60 days after being identified as a case and have COVID-19 mentioned on their death certificate. 
+  #     Data for the last 5 days, highlighted in grey, are incomplete. 
 
-    download:
-      - newDeaths60DaysByDeathDate
-      - cumDeaths60DaysByDeathDate
-      - newDeaths60DaysByPublishDate
-      - cumDeaths60DaysByPublishDate
+  #   download:
+  #     - newDeaths60DaysByDeathDate
+  #     - cumDeaths60DaysByDeathDate
+  #     - newDeaths60DaysByPublishDate
+  #     - cumDeaths60DaysByPublishDate
 
-    options:
-      type: radio
-      heading: null
-      choices:
-        - By date of death
-        - By date reported
+  #   options:
+  #     type: radio
+  #     heading: null
+  #     choices:
+  #       - By date of death
+  #       - By date reported
 
-    By date of death:
+  #   By date of death:
 
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: normal
-          fields:
-            - label: Number of deaths
-              value: newDeaths60DaysByDeathDate
-              tooltip: Daily number of deaths within 60 days of first positive test by date of death
-              type: bar
-              colour: 0
-              rollingAverage: false
-              highlight:
-                from: -4
-                to: 0
-                colour: 6
-                label: "Most recent 5 days (incomplete)"
+  #     tabs:
+  #       - heading: Daily
+  #         tabType: chart
+  #         barType: normal
+  #         fields:
+  #           - label: Number of deaths
+  #             value: newDeaths60DaysByDeathDate
+  #             tooltip: Daily number of deaths within 60 days of first positive test by date of death
+  #             type: bar
+  #             colour: 0
+  #             rollingAverage: false
+  #             highlight:
+  #               from: -4
+  #               to: 0
+  #               colour: 6
+  #               label: "Most recent 5 days (incomplete)"
 
-            - label: Deaths (7-day average)
-              value: newDeaths60DaysByDeathDate
-              tooltip: 7 day rolling average of the daily number of deaths within 60 days of first positive test
-              type: line
-              colour: 3
-              fill: false
-              rollingAverage:
-                window: 7
-                clipEnd: 4
+  #           - label: Deaths (7-day average)
+  #             value: newDeaths60DaysByDeathDate
+  #             tooltip: 7 day rolling average of the daily number of deaths within 60 days of first positive test
+  #             type: line
+  #             colour: 3
+  #             fill: false
+  #             rollingAverage:
+  #               window: 7
+  #               clipEnd: 4
 
-        - heading: Cumulative
-          tabType: chart
-          fields:
-            - label: Number of deaths
-              value: cumDeaths60DaysByDeathDate
-              tooltip: Cumulative total number of deaths within 60 days of first positive test by date of death
-              type: bar
-              colour: 0
-              rollingAverage: false
-              highlight:
-                from: -4
-                to: 0
-                colour: 6
-                label: "Most recent 5 days (incomplete)"
+  #       - heading: Cumulative
+  #         tabType: chart
+  #         fields:
+  #           - label: Number of deaths
+  #             value: cumDeaths60DaysByDeathDate
+  #             tooltip: Cumulative total number of deaths within 60 days of first positive test by date of death
+  #             type: bar
+  #             colour: 0
+  #             rollingAverage: false
+  #             highlight:
+  #               from: -4
+  #               to: 0
+  #               colour: 6
+  #               label: "Most recent 5 days (incomplete)"
 
-        - heading: Data
-          tabType: table
-          fields:
-            - label: Date of death
-              value: date
-              type: date
-              tooltip: Date on which the death occurred
+  #       - heading: Data
+  #         tabType: table
+  #         fields:
+  #           - label: Date of death
+  #             value: date
+  #             type: date
+  #             tooltip: Date on which the death occurred
 
-            - label: Daily deaths
-              value: newDeaths60DaysByDeathDate
-              type: numeric
-              tooltip: Daily number of deaths within 60 days of first positive test by date of death
+  #           - label: Daily deaths
+  #             value: newDeaths60DaysByDeathDate
+  #             type: numeric
+  #             tooltip: Daily number of deaths within 60 days of first positive test by date of death
 
-            - label: Cumulative deaths
-              value: cumDeaths60DaysByDeathDate
-              type: numeric
-              tooltip: Cumulative total number of deaths within 60 days of first positive test by date of death
+  #           - label: Cumulative deaths
+  #             value: cumDeaths60DaysByDeathDate
+  #             type: numeric
+  #             tooltip: Cumulative total number of deaths within 60 days of first positive test by date of death
 
-        - heading: About
-          tabType: metadata
-          filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
+  #       - heading: About
+  #         tabType: metadata
+  #         filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
 
-    By date reported:
+  #   By date reported:
 
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: normal
-          fields:
-            - label: Number of deaths
-              value: newDeaths60DaysByPublishDate
-              tooltip: Daily number of deaths within 60 days of first positive test by date reported
-              type: bar
-              colour: 0
-              rollingAverage: false
+  #     tabs:
+  #       - heading: Daily
+  #         tabType: chart
+  #         barType: normal
+  #         fields:
+  #           - label: Number of deaths
+  #             value: newDeaths60DaysByPublishDate
+  #             tooltip: Daily number of deaths within 60 days of first positive test by date reported
+  #             type: bar
+  #             colour: 0
+  #             rollingAverage: false
 
-            - label: Deaths (7-day average)
-              value: newDeaths60DaysByPublishDate
-              tooltip: 7 day rolling average of the daily number of deaths within 60 days of first positive test
-              type: line
-              colour: 3
-              fill: false
-              rollingAverage:
-                window: 7
-                clipEnd: 0
+  #           - label: Deaths (7-day average)
+  #             value: newDeaths60DaysByPublishDate
+  #             tooltip: 7 day rolling average of the daily number of deaths within 60 days of first positive test
+  #             type: line
+  #             colour: 3
+  #             fill: false
+  #             rollingAverage:
+  #               window: 7
+  #               clipEnd: 0
 
-        # cumulative chart not shown as time series only goes back to mid Aug when most deaths had already occurred
-        # - heading: Cumulative
-        #   tabType: chart
-        #   fields:
-        #     - label: Number of deaths
-        #       value: cumDeaths60DaysByPublishDate
-        #       tooltip: Cumulative total number of deaths within 60 days of positive test by date reported
-        #       type: bar
-        #       colour: 0
-        #       rollingAverage: false
+  #       # cumulative chart not shown as time series only goes back to mid Aug when most deaths had already occurred
+  #       # - heading: Cumulative
+  #       #   tabType: chart
+  #       #   fields:
+  #       #     - label: Number of deaths
+  #       #       value: cumDeaths60DaysByPublishDate
+  #       #       tooltip: Cumulative total number of deaths within 60 days of positive test by date reported
+  #       #       type: bar
+  #       #       colour: 0
+  #       #       rollingAverage: false
 
-        - heading: Data
-          tabType: table
-          fields:
-            - label: Date of death
-              value: date
-              type: date
-              tooltip: Date on which the death occurred
+  #       - heading: Data
+  #         tabType: table
+  #         fields:
+  #           - label: Date of death
+  #             value: date
+  #             type: date
+  #             tooltip: Date on which the death occurred
 
-            - label: Daily deaths
-              value: newDeaths60DaysByPublishDate
-              type: numeric
-              tooltip: Daily number of deaths within 60 days of first positive test by date reported
+  #           - label: Daily deaths
+  #             value: newDeaths60DaysByPublishDate
+  #             type: numeric
+  #             tooltip: Daily number of deaths within 60 days of first positive test by date reported
 
-            - label: Cumulative deaths
-              value: cumDeaths60DaysByPublishDate
-              type: numeric
-              tooltip: Cumulative total number of deaths within 60 days of first positive test by date reported
+  #           - label: Cumulative deaths
+  #             value: cumDeaths60DaysByPublishDate
+  #             type: numeric
+  #             tooltip: Cumulative total number of deaths within 60 days of first positive test by date reported
 
-        - heading: About
-          tabType: metadata
-          filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
+  #       - heading: About
+  #         tabType: metadata
+  #         filename: cardMetadata/deaths/cardDeaths60DaysTimeSeries.md
 
 ##############################################################################################################################
 
-# 60 day chart for regions and LAs NOTE: similar chart for England defined as separate card above
+# 60 day chart for regions and LAs, now including England
 
-  - heading: Deaths within 60 days of positive test
+# NOTE: similar chart for England defined as separate card above - was previously used as has report date radio button
+
+  - heading: Deaths within 60 days of positive test by date of death
     cardType: chart
     locationAware:
       included:
         areaType:
+          - nation
           - region
           - utla
           - ltla
-      excluded:
-        areaType:
-          - nation
 
     fullWidth: true
     abstract: >
       Number of people who had either died within 60 days of being identified as a COVID-19 case, 
       or died more than 60 days after being identified as a case and have COVID-19 mentioned on their death certificate. 
-      Data for the last 5 days, highlighted in grey, are incomplete. 
+      Data for the last 5 days, highlighted in grey, are incomplete. Data are shown by date of death.
 
     download:
       - newDeaths60DaysByDeathDate
