corrects typo in new card

--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -738,7 +738,7 @@ cards:
 
 # {{ StartDevOnlyBlock }}
 
-  - heading: Daily change in reported deaths with 28 days of positive test by specimen date
+  - heading: Daily change in reported deaths with 28 days of positive test by date of death
     cardType: chart
     fullWidth: true
     locationAware:
