updates downloads on case demog card

--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -763,6 +763,8 @@ cards:
     
     download:
       - newCasesBySpecimenDateAgeDemographics
+      - newFirstEpisodesBySpecimenDateAgeDemographics
+      - newReinfectionsBySpecimenDateAgeDemographics
 
     options:
       type: radio
