--- a/Layouts/vaccinations.yaml
+++ b/Layouts/vaccinations.yaml
@@ -2277,6 +2277,10 @@ cards:
               parameter: age
               metrics:
               #Both Eng and Scot
+              - label: 5 to 11
+                value: "05_11"
+
+              #Both Eng and Scot
               - label: 12 to 15
                 value: "12_15"
 
