--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -223,7 +223,7 @@ cards:
 
 ##############################################################################################################################
 
-# nations and regions only
+# nations and regions, LAs only
 # scotland added 9 Mar 2022
 
   - heading: Cases by specimen date
@@ -233,6 +233,8 @@ cards:
         areaType:
           - nation
           - region
+          - utla
+          - ltla
 
     fullWidth: true
     abstract: >
@@ -541,86 +543,86 @@ cards:
 
 # not shown for UK and nations and regions (have separate cards)
 
-  - heading: Cases by specimen date
-    cardType: chart
-    locationAware:
-      included:
-        areaType:
-          - utla
-          - ltla
+  # - heading: Cases by specimen date
+  #   cardType: chart
+  #   locationAware:
+  #     included:
+  #       areaType:
+  #         - utla
+  #         - ltla
 
-    fullWidth: true
-    abstract: >
-      Number of cases, by specimen date. 
-      Data for the last 5 days, highlighted in grey, are incomplete. 
+  #   fullWidth: true
+  #   abstract: >
+  #     Number of cases, by specimen date. 
+  #     Data for the last 5 days, highlighted in grey, are incomplete. 
 
-    download:
-      - newCasesBySpecimenDate
-      - cumCasesBySpecimenDate
+  #   download:
+  #     - newCasesBySpecimenDate
+  #     - cumCasesBySpecimenDate
 
-    tabs:
-      - heading: Daily
-        tabType: chart
-        barType: overlay
-        fields:
-          - label: Number of cases
-            value: newCasesBySpecimenDate
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 0
-            rollingAverage: false
-            highlight: 
-              from: -4
-              to: 0
-              colour: 6
-              label: "Most recent 5 days (incomplete)"
+  #   tabs:
+  #     - heading: Daily
+  #       tabType: chart
+  #       barType: overlay
+  #       fields:
+  #         - label: Number of cases
+  #           value: newCasesBySpecimenDate
+  #           tooltip: Daily number of new people tested positive by date the sample was taken from the person
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+  #           highlight: 
+  #             from: -4
+  #             to: 0
+  #             colour: 6
+  #             label: "Most recent 5 days (incomplete)"
 
-          - label: Cases (7-day average)
-            value: newCasesBySpecimenDate
-            tooltip: 7-day rolling average of the daily number of people tested positive by specimen date
-            type: line
-            colour: 3
-            fill: false
-            rollingAverage:
-              window: 7
-              clipEnd: 4 #no of days to exclude for incomplete data
+  #         - label: Cases (7-day average)
+  #           value: newCasesBySpecimenDate
+  #           tooltip: 7-day rolling average of the daily number of people tested positive by specimen date
+  #           type: line
+  #           colour: 3
+  #           fill: false
+  #           rollingAverage:
+  #             window: 7
+  #             clipEnd: 4 #no of days to exclude for incomplete data
 
-      - heading: Cumulative
-        tabType: chart
-        fields:
-          - label: Number of cases
-            value: cumCasesBySpecimenDate
-            tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
-            type: bar
-            colour: 0
-            rollingAverage: false
-            highlight: 
-              from: -4
-              to: 0
-              colour: 6
-              label: "Most recent 5 days (incomplete)"
+  #     - heading: Cumulative
+  #       tabType: chart
+  #       fields:
+  #         - label: Number of cases
+  #           value: cumCasesBySpecimenDate
+  #           tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
+  #           type: bar
+  #           colour: 0
+  #           rollingAverage: false
+  #           highlight: 
+  #             from: -4
+  #             to: 0
+  #             colour: 6
+  #             label: "Most recent 5 days (incomplete)"
 
-      - heading: Data
-        tabType: table
-        fields:
-          - label: Specimen date
-            value: date
-            type: date
-            tooltip: Date the sample was taken from the person
+  #     - heading: Data
+  #       tabType: table
+  #       fields:
+  #         - label: Specimen date
+  #           value: date
+  #           type: date
+  #           tooltip: Date the sample was taken from the person
 
-          - label: Daily cases
-            value: newCasesBySpecimenDate
-            type: numeric
-            tooltip: Daily number of new people tested positive by date the sample was taken from the person
+  #         - label: Daily cases
+  #           value: newCasesBySpecimenDate
+  #           type: numeric
+  #           tooltip: Daily number of new people tested positive by date the sample was taken from the person
 
-          - label: Total cases
-            value: cumCasesBySpecimenDate
-            type: numeric
-            tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
+  #         - label: Total cases
+  #           value: cumCasesBySpecimenDate
+  #           type: numeric
+  #           tooltip: Cumulative total number of new people tested positive by date the sample was taken from the person
 
-      - heading: About 
-        tabType: metadata
-        filename: cardMetadata/cases/cardCasesTimeSeries.md
+  #     - heading: About 
+  #       tabType: metadata
+  #       filename: cardMetadata/cases/cardCasesTimeSeries.md
 
 ##############################################################################################################################
 
